fix z-indexes (#219)

--- a/apps/block_scout_web/assets/css/components/_cookie_banner.scss
+++ b/apps/block_scout_web/assets/css/components/_cookie_banner.scss
@@ -1,7 +1,7 @@
 .cookie-banner {
   position: fixed;
   bottom: 0;
-  z-index: 2;
+  z-index: 120;
   width: 100%;
   background: $celo-blue;
   color: #fff;
