--- a/apps/block_scout_web/assets/css/components/_network-selector.scss
+++ b/apps/block_scout_web/assets/css/components/_network-selector.scss
@@ -24,7 +24,7 @@ $network-selector-item-icon-dimensions: 30px !default;
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 123;
+  z-index: 110;
 }
 
 .network-selector-overlay-close {
